added StatisticsTest.java for finding median. Added sort into MapTest.java.